Polish asciidoc github rendering

--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,10 @@
+ifdef::env-github[]
+:tip-caption: :bulb:
+:note-caption: :information_source:
+:important-caption: :heavy_exclamation_mark:
+:caution-caption: :fire:
+:warning-caption: :warning:
+endif::[]
 = Generic purpose library for VSCode extensions
 
 This library is meant to have a collection of extension utilities to ease development of
