Add archive text to README.adoc

--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,5 @@
+# vscode-extension-di is no longer actively maintained by VMware, Inc.
+
 ifdef::env-github[]
 :tip-caption: :bulb:
 :note-caption: :information_source:
